# contracts

./: .gitignore  Cargo.toml  foundry.toml
.github/workflows/: test.yml
crates/fhe-contract-tests/: Cargo.toml
crates/fhe-contract-tests/src/: main.rs
crates/fhe-contract-tests/src/bindings/: mod.rs
src/: Bytes.sol  FHE.sol
test/: Bytes.t.sol  FHE.t.sol
test/data/: README.md  private_key.pri  public_key.pub
